Added lines in file index.html and style.css

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
     <div class="container">
-        <div>
+        <div class="image-container">
             <img src="qr-code-png.png">
         </div>
         <div class="p1">
-            <p>Improve your front-end skills by building projects</p>
+            <p class="p-price">Improve your front-end skills by building projects</p>
         </div>
         <div class="p2">
             <p>Scan the QR code to visit Frontend Mentor and take your coding skill to the next level</p>
